--- a/05-design-system/packages/docs/package.json
+++ b/05-design-system/packages/docs/package.json
@@ -21,6 +21,7 @@
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^3.0.1",
+    "@storybook/storybook-deployer": "^2.8.12",
     "babel-loader": "^8.3.0",
     "vite": "^4.0.4"
   },
@@ -29,6 +30,7 @@
     "@ignite-ui/ts-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
+    "@storybook/addon-a11y": "^6.5.12",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
