--- a/05-design-system/.github/workflows/deploy-docs.yml
+++ b/05-design-system/.github/workflows/deploy-docs.yml
@@ -3,7 +3,7 @@ name: Deploy docs
 on:
   push:
     branches:
-      - main
+      - branch main
 
 jobs:
   build-and-deploy:
@@ -31,3 +31,4 @@ jobs:
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
+          # teste
