--- a/Bonus-react-redux-zustand/package.json
+++ b/Bonus-react-redux-zustand/package.json
@@ -7,14 +7,22 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "server": "json-server server.json -w -d 500"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "lucide-react": "^0.259.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1"
+    "react-player": "^2.12.0",
+    "react-redux": "^8.1.1",
+    "tailwind-scrollbar": "^3.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -26,9 +34,11 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "json-server": "^0.17.3",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vitest": "^0.33.0"
   }
 }
